Prevent Immediate release and Contact details from becoming one column on the paper.

--- a/css/print.css
+++ b/css/print.css
@@ -204,7 +204,8 @@ img.print-logo {
 }
 
 @media (min-width: 550px) {
-  .node-type-press-release.panelized-node.print-version .panel-wwm-3col-stacked .panel-col-mid .content-inner-top-right {
+  .node-type-press-release.panelized-node.print-version .panel-wwm-3col-stacked .panel-col-mid .content-inner-top-right,
+  .node-type-press-release.panelized-node.print-version .panel-wwm-3col-stacked .panel-col-mid .content-inner-top-left {
     flex: 1 0px;
     margin-left: .5em;
   }
