Fix print width and padding/margin

--- a/sass/print.scss
+++ b/sass/print.scss
@@ -85,7 +85,7 @@ img.print-logo {
 }
 
 .print-content {
-    max-width: 1024px;
+    max-width: 960px;
     margin: auto;
 }
 
@@ -208,6 +208,7 @@ img.print-logo {
 
     .content-main {
         margin: 0 auto 1em auto;
+        padding: 5%;
     }
 
     img {
