--- a/css/print.css
+++ b/css/print.css
@@ -81,7 +81,7 @@ img.print-logo {
 }
 
 .print-content {
-  max-width: 1024px;
+  max-width: 960px;
   margin: auto;
 }
 
@@ -203,6 +203,7 @@ img.print-logo {
 
 .node-type-press-release.panelized-node.print-version .content-main {
   margin: 0 auto 1em auto;
+  padding: 5%;
 }
 
 .node-type-press-release.panelized-node.print-version img {
