--- a/sass/print.scss
+++ b/sass/print.scss
@@ -209,6 +209,7 @@ img.print-logo {
     .content-main {
         margin: 0 auto 1em auto;
         padding: 5%;
+        background: blue;
     }
 
     img {
