--- a/css/print.css
+++ b/css/print.css
@@ -27,6 +27,48 @@ td {
   padding: 5px;
 }
 
+h1 {
+  line-height: 1.6em;
+  margin: 1.6em 0;
+  font-size: 1.5em;
+}
+
+h2 {
+  line-height: 1.4em;
+  margin: 1.4em 0;
+  font-size: 1.2em;
+}
+
+h3 {
+  font-size: 1.17em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+h4 {
+  font-size: 1em;
+  margin-top: 1.33em;
+  margin-bottom: 1.33em;
+}
+
+h5 {
+  font-size: .83em;
+  margin-top: 1.67em;
+  margin-bottom: 1.67em;
+}
+
+h6 {
+  font-size: .67em;
+  margin-top: 2.33em;
+  margin-bottom: 2.33em;
+}
+
+p {
+  font-size: 1em;
+  line-height: 1.4em;
+  margin: 1.2em 0;
+}
+
 #menu {
   visibility: hidden;
 }
@@ -110,46 +152,91 @@ img.print-logo {
   text-align: center;
 }
 
-.node-type-press-release.panelized-node.print-version h1 {
-  line-height: 1.6em;
-  margin: 1.6em 0;
-  font-size: 1.5em;
+.rtecenter {
+  text-align: center;
 }
 
-.node-type-press-release.panelized-node.print-version h2 {
-  line-height: 1.4em;
-  margin: 1.4em 0;
-  font-size: 1.2em;
+#content {
+  margin-right: 1%;
+  margin-left: 1%;
 }
 
-.node-type-press-release.panelized-node.print-version h3 {
-  font-size: 1.17em;
-  margin-top: 1em;
-  margin-bottom: 1em;
+.panel-col-mid {
+  flex: 1 1 500px;
 }
 
-.node-type-press-release.panelized-node.print-version h4 {
-  font-size: 1em;
-  margin-top: 1.33em;
-  margin-bottom: 1.33em;
+@media (min-width: 1024px) {
+  .panel-col-right {
+    flex: 0 300px;
+    min-width: 300px;
+  }
 }
 
-.node-type-press-release.panelized-node.print-version h5 {
-  font-size: .83em;
-  margin-top: 1.67em;
-  margin-bottom: 1.67em;
+.panel-col-right div:first-child .panel-pane {
+  margin-top: 0;
 }
 
-.node-type-press-release.panelized-node.print-version h6 {
-  font-size: .67em;
-  margin-top: 2.33em;
-  margin-bottom: 2.33em;
+h1.pane-node-title-field {
+  text-align: center;
 }
 
-.node-type-press-release.panelized-node.print-version p {
-  font-size: 1em;
-  line-height: 1.4em;
-  margin: 1.2em 0;
+.field-name-field-featured-image {
+  margin: 0 1em 1em 0;
+  float: left;
+  width: 30%;
+  max-width: 360px;
+}
+
+.field-name-field-featured-image img {
+  width: 100%;
+}
+
+.field-name-field-full-contact-details {
+  margin: 2em 0;
+  text-align: center;
+}
+
+.field-name-field-full-contact-details h4 {
+  margin: 0;
+  display: inline-flex;
+}
+
+.content-main {
+  margin: 0 auto 1em auto;
+  padding: 5%;
+  background: blue;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.field-name-field-upload-document {
+  flex-flow: row wrap;
+  margin-bottom: 0.5em;
+}
+
+.field-name-field-categories {
+  margin-bottom: 0.5em;
+}
+
+.field-name-field-categories .field-label,
+.field-name-field-categories .field-items {
+  float: none;
+  display: inline-block;
+}
+
+.pane-custom.pane-1 {
+  text-align: center;
+}
+
+@media (min-width: 550px) {
+  .panel-wwm-3col-stacked .panel-col-mid .content-inner-top-right,
+  .panel-wwm-3col-stacked .panel-col-mid .content-inner-top-left {
+    flex: 1 0px;
+    margin-left: .5em;
+  }
 }
 
 .node-type-press-release.panelized-node.print-version .rtecenter {
