--- a/sass/print.scss
+++ b/sass/print.scss
@@ -27,6 +27,48 @@ td {
     padding: 5px;
 }
 
+h1 {
+    line-height: 1.6em;
+    margin: 1.6em 0;
+    font-size: 1.5em;
+}
+
+h2 {
+    line-height: 1.4em;
+    margin: 1.4em 0;
+    font-size: 1.2em;
+}
+
+h3 {
+    font-size: 1.17em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+h4 {
+    font-size: 1em;
+    margin-top: 1.33em;
+    margin-bottom: 1.33em;
+}
+
+h5 {
+    font-size: .83em;
+    margin-top: 1.67em;
+    margin-bottom: 1.67em;
+}
+
+h6 {
+    font-size: .67em;
+    margin-top: 2.33em;
+    margin-bottom: 2.33em;
+}
+
+p {
+    font-size: 1em;
+    line-height: 1.4em;
+    margin: 1.2em 0;
+}
+
 #menu {
     visibility: hidden;
 }
@@ -114,49 +156,97 @@ img.print-logo {
     text-align: center;
 }
 
-.node-type-press-release.panelized-node.print-version {
-    h1 {
-        line-height: 1.6em;
-        margin: 1.6em 0;
-        font-size: 1.5em;
+.rtecenter {
+    text-align: center;
+}
+
+#content {
+    margin-right: 1%;
+    margin-left: 1%;
+}
+
+.panel-col-mid {
+    flex: 1 1 500px;
+}
+
+.panel-col-right {
+    @include breakpoint(1024px) {
+        flex: 0 300px;
+        min-width: 300px;
     }
 
-    h2 {
-        line-height: 1.4em;
-        margin: 1.4em 0;
-        font-size: 1.2em;
+    div:first-child .panel-pane {
+        margin-top: 0;
     }
+}
 
-    h3 {
-        font-size: 1.17em;
-        margin-top: 1em;
-        margin-bottom: 1em;
+h1.pane-node-title-field {
+    text-align: center;
+}
+
+.field-name-field-featured-image {
+    margin: 0 1em 1em 0;
+    float: left;
+    width: 30%;
+    max-width: 360px;
+
+    img {
+        width: 100%;
     }
+}
+
+.field-name-field-full-contact-details {
+    margin: 2em 0;
+    text-align: center;
 
     h4 {
-        font-size: 1em;
-        margin-top: 1.33em;
-        margin-bottom: 1.33em;
+        margin: 0;
+        display: inline-flex;
     }
+}
 
-    h5 {
-        font-size: .83em;
-        margin-top: 1.67em;
-        margin-bottom: 1.67em;
+.content-main {
+    margin: 0 auto 1em auto;
+    padding: 5%;
+    background: blue;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+.field-name-field-upload-document {
+    flex-flow: row wrap;
+    margin-bottom: 0.5em;
+}
+
+.field-name-field-categories {
+    margin-bottom: 0.5em;
+
+    .field-label,
+    .field-items {
+        float: none;
+        display: inline-block;
     }
+}
 
-    h6 {
-        font-size: .67em;
-        margin-top: 2.33em;
-        margin-bottom: 2.33em;
+.pane-custom.pane-1 {
+    text-align: center;
+}
+
+@include breakpoint(550px) {
+    .panel-wwm-3col-stacked .panel-col-mid {
+
+        .content-inner-top-right,
+        .content-inner-top-left {
+            flex: 1 0px;
+            margin-left: .5em;
+        }
     }
+}
 
-    p {
-        font-size: 1em;
-        line-height: 1.4em;
-        margin: 1.2em 0;
-    }
-
+.node-type-press-release.panelized-node.print-version {
     .rtecenter {
         text-align: center;
     }
