Add blue background to the whole page as test

--- a/css/print.css
+++ b/css/print.css
@@ -239,6 +239,10 @@ img {
   }
 }
 
+.node-type-press-release.panelized-node.print-version {
+  background: blue;
+}
+
 .node-type-press-release.panelized-node.print-version .rtecenter {
   text-align: center;
 }
@@ -291,7 +295,6 @@ img {
 .node-type-press-release.panelized-node.print-version .content-main {
   margin: 0 auto 1em auto;
   padding: 5%;
-  background: blue;
 }
 
 .node-type-press-release.panelized-node.print-version img {
