Fix layout of pdf

--- a/sass/print.scss
+++ b/sass/print.scss
@@ -156,98 +156,9 @@ img.print-logo {
     text-align: center;
 }
 
-.rtecenter {
-    text-align: center;
-}
-
-#content {
-    margin-right: 1%;
-    margin-left: 1%;
-}
-
-.panel-col-mid {
-    flex: 1 1 500px;
-}
-
-.panel-col-right {
-    @include breakpoint(1024px) {
-        flex: 0 300px;
-        min-width: 300px;
-    }
-
-    div:first-child .panel-pane {
-        margin-top: 0;
-    }
-}
-
-h1.pane-node-title-field {
-    text-align: center;
-}
-
-.field-name-field-featured-image {
-    margin: 0 1em 1em 0;
-    float: left;
-    width: 30%;
-    max-width: 360px;
-
-    img {
-        width: 100%;
-    }
-}
-
-.field-name-field-full-contact-details {
-    margin: 2em 0;
-    text-align: center;
-
-    h4 {
-        margin: 0;
-        display: inline-flex;
-    }
-}
-
-.content-main {
-    margin: 0 auto 1em auto;
-    padding: 5%;
-    background: blue;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-}
-
-.field-name-field-upload-document {
-    flex-flow: row wrap;
-    margin-bottom: 0.5em;
-}
-
-.field-name-field-categories {
-    margin-bottom: 0.5em;
-
-    .field-label,
-    .field-items {
-        float: none;
-        display: inline-block;
-    }
-}
-
-.pane-custom.pane-1 {
-    text-align: center;
-}
-
-@include breakpoint(550px) {
-    .panel-wwm-3col-stacked .panel-col-mid {
-
-        .content-inner-top-right,
-        .content-inner-top-left {
-            flex: 1 0px;
-            margin-left: .5em;
-        }
-    }
-}
-
 .node-type-press-release.panelized-node.print-version {
-    background: blue;
+    display: flex;
+    flex-flow: column nowrap;
     
     .rtecenter {
         text-align: center;
