Add blue background to the whole page as test

--- a/css/print.css
+++ b/css/print.css
@@ -211,6 +211,7 @@ img.print-logo {
   padding: 5%;
   display: flex;
   flex-flow: column nowrap;
+  background: blue;
 }
 
 .node-type-press-release.panelized-node.print-version img {
