--- a/sass/print.scss
+++ b/sass/print.scss
@@ -214,6 +214,7 @@ img.print-logo {
         padding: 5%;
         display: flex;
         flex-flow: column nowrap;
+        background: blue;
     }
 
     img {
