--- a/sass/print.scss
+++ b/sass/print.scss
@@ -215,6 +215,7 @@ img.print-logo {
         display: flex;
         flex-flow: column nowrap;
         background: blue;
+        width: 100%;
     }
 
     img {
