--- a/sass/print.scss
+++ b/sass/print.scss
@@ -172,6 +172,7 @@ img.print-logo {
     .panel-col-mid {
         flex: 1 1 500px;
         width: 100%;
+        display: block;
     }
 
     .panel-col-right {
