Set Immediate release and contact details in two columns

--- a/css/print.css
+++ b/css/print.css
@@ -174,8 +174,9 @@ img.print-logo {
 
 .node-type-press-release.panelized-node.print-version .content-inner-top-right,
 .node-type-press-release.panelized-node.print-version .content-inner-top-left {
+  margin-left: .5em;
   display: inline-block;
-  width: calc(50% - 1em);
+  width: 49%;
   vertical-align: top;
 }
 
