--- a/css/print.css
+++ b/css/print.css
@@ -152,6 +152,16 @@ img.print-logo {
   text-align: center;
 }
 
+.print-version .field-name-field-featured-image {
+  margin: 0 1em 1em 0;
+  float: left;
+  max-width: 360px;
+}
+
+.print-version .field-name-field-featured-image img {
+  width: 100%;
+}
+
 .node-type-press-release.panelized-node.print-version {
   display: flex;
   flex-flow: column nowrap;
@@ -192,17 +202,6 @@ img.print-logo {
 
 .node-type-press-release.panelized-node.print-version h1.pane-node-title-field {
   text-align: center;
-}
-
-.node-type-press-release.panelized-node.print-version .field-name-field-featured-image {
-  margin: 0 1em 1em 0;
-  float: left;
-  width: 30%;
-  max-width: 360px;
-}
-
-.node-type-press-release.panelized-node.print-version .field-name-field-featured-image img {
-  width: 100%;
 }
 
 .node-type-press-release.panelized-node.print-version .field-name-field-full-contact-details {
