--- a/css/print.css
+++ b/css/print.css
@@ -160,6 +160,7 @@ img.print-logo {
 
 .print-version .field-name-field-featured-image img {
   width: 100%;
+  height: auto;
 }
 
 .node-type-press-release.panelized-node.print-version {
