--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -176,13 +176,8 @@ ul li {
 body {
   max-width: 1400px;
   margin: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column nowrap;
-          flex-flow: column nowrap;
+  flex-flow: column nowrap;
   min-height: 100vh; }
   body a {
     color: #008080;
@@ -247,13 +242,13 @@ body.tao {
   width: 100%;
   margin: auto;
   max-width: 100%;
-  -webkit-box-flex: 100%;
-      -ms-flex: 100%;
-          flex: 100%; }
+  flex: 100%; }
   @media (min-width: 1025px) {
     #page {
       width: 80%;
       min-width: 1024px; } }
+  #page img {
+    height: auto; }
 
 #main-content {
   margin: 0;
@@ -322,8 +317,7 @@ body:not(.maintenance-page) #header {
 
 input[type="password"] {
   width: 100%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
+  box-sizing: border-box; }
 
 .field > .field-items {
   margin-left: 0; }
@@ -370,17 +364,12 @@ div#toolbar div.toolbar-shortcuts ul {
 .views-exposed-form {
   margin-bottom: 1em;
   margin-right: 1em;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex; }
   .views-exposed-form label {
     font-size: 13px; }
   .views-exposed-form .basic-options {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap; }
+    flex-wrap: wrap; }
   .views-exposed-form > legend {
     position: absolute; }
   .views-exposed-form a.fieldset-title {
@@ -418,8 +407,7 @@ div#toolbar div.toolbar-shortcuts ul {
     padding: 1em;
     display: inline-block;
     width: 100%;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box; }
+    box-sizing: border-box; }
 
 .vbo-views-form p,
 .view-empty p {
@@ -516,8 +504,6 @@ ul.panels-ipe-linkbar li {
 
 .cke_inner .cke_top {
   overflow: visible;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex; }
 
 .cke_toolbar a.cke_button:hover {
@@ -611,12 +597,8 @@ ul.rules-operations-add a {
   padding: 5px 5px 5px 20px; }
 
 .views-mini-pager {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
+  justify-content: center; }
 
 .views-content .item-list ul li {
   border-bottom: 0px;
@@ -658,14 +640,9 @@ ul.rules-operations-add a {
   width: 100%;
   border: 1px solid #ddd;
   padding: 5px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  box-sizing: border-box;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center; }
+  align-items: center; }
   #modal-content .option-text-aligner .form-item {
     float: none;
     border: 0; }
@@ -710,12 +687,10 @@ ul.rules-operations-add a {
     font-size: 14px; }
   #block-tb-megamenu-main-menu .tb-megamenu-main-menu .dropdown-menu {
     background-color: #f8f8f8;
-    -webkit-box-shadow: none;
-            box-shadow: none; }
+    box-shadow: none; }
     @media (min-width: 500px) {
       #block-tb-megamenu-main-menu .tb-megamenu-main-menu .dropdown-menu {
-        -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-                box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); } }
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); } }
   #block-tb-megamenu-main-menu .tb-megamenu-main-menu .tb-megamenu-column-inner {
     padding: 0; }
     @media (min-width: 500px) {
@@ -870,8 +845,7 @@ div.panel-pane div.node.boxed {
 
 .my-sticky-element {
   text-align: center;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   width: initial;
   width: inherit;
   z-index: 100; }
@@ -891,8 +865,7 @@ div.panel-pane div.node.boxed {
     display: inline-block;
     font-size: 13px; }
   .form-item input[type="text"] {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box; }
+    box-sizing: border-box; }
 
 .field-collection-view .entity-field-collection-item {
   display: inline-block;
@@ -953,20 +926,13 @@ table.field-multiple-table tr {
 
 @media (min-width: 768px) {
   table.field-multiple-table tr.draggable {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex; }
     table.field-multiple-table tr.draggable td.field-multiple-drag {
-      -webkit-box-ordinal-group: 2;
-          -ms-flex-order: 1;
-              order: 1;
-      -webkit-box-sizing: border-box;
-              box-sizing: border-box;
+      order: 1;
+      box-sizing: border-box;
       display: block; }
     table.field-multiple-table tr.draggable td:not([class]) {
-      -webkit-box-flex: 100%;
-          -ms-flex: 100%;
-              flex: 100%;
+      flex: 100%;
       display: block; } }
 
 tr.ief-row-entity .ief-entity-operations input.button-remove {
@@ -995,8 +961,6 @@ ul#views-display-menu-tabs {
   width: auto; }
 
 .pane-node-form-path .pane-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex; }
 
 select.form-select {
@@ -1012,8 +976,7 @@ label.panopoly-admin-hide-body-label-processed {
 .rubik-inline-field-descriptions .page-content .form-item .description,
 .description {
   color: green;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 5px;
   clear: both; }
   .rubik-inline-field-descriptions .page-content .form-item .description em,
@@ -1066,7 +1029,6 @@ form .tabs {
   /* Chrome10+,Safari5.1+ */
   /* Opera 11.10+ */
   /* IE10+ */
-  background: -webkit-gradient(linear, left top, left bottom, from(#7db9e8), to(#1e5799));
   background: linear-gradient(to bottom, #7db9e8 0%, #1e5799 100%);
   /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', endColorstr='#1e5799', GradientType=0);
@@ -1097,7 +1059,6 @@ form .tabs {
   /* Chrome10+,Safari5.1+ */
   /* Opera 11.10+ */
   /* IE10+ */
-  background: -webkit-gradient(linear, left top, left bottom, from(#666666), to(#333333));
   background: linear-gradient(to bottom, #666666 0%, #333333 100%);
   /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#666666', endColorstr='#333333', GradientType=0);
@@ -1127,22 +1088,13 @@ form .tabs {
   width: 100%; }
 
 .form-item-path-alias {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap; }
+  flex-flow: row wrap; }
   .form-item-path-alias label,
   .form-item-path-alias span {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 auto;
-            flex: 0 auto; }
+    flex: 0 auto; }
   .form-item-path-alias input {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 auto;
-            flex: 1 auto; }
+    flex: 1 auto; }
 
 label[for="edit-pubdate"] {
   padding-left: 0; }
@@ -1185,8 +1137,6 @@ label[for="edit-pubdate"] {
   width: auto; }
 
 .advanced-options {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-top: 1em; }
   .advanced-options #edit-secondary.collapsed {
@@ -1241,13 +1191,8 @@ html.js fieldset.collapsible div.fieldset-wrapper {
   float: left; }
 
 #block-panels-mini-header .row-one {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  flex-flow: row wrap;
   width: 100%;
   margin-bottom: 0px;
   background: none; }
@@ -1320,29 +1265,17 @@ html.js fieldset.collapsible div.fieldset-wrapper {
     #block-panels-mini-header .row-one .pane-widgets-s-socialmedia-share-default #widgets-element-socialmedia_addthis-email {
       margin-right: 0; }
   #block-panels-mini-header .row-one .middle-column {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    align-items: center;
     display: flex;
-    -webkit-box-flex: 1;
-        -ms-flex: 1 100%;
-            flex: 1 100%;
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    flex: 1 100%;
+    order: 1;
+    justify-content: flex-start;
     border: 1px solid #ccc;
     padding: 0.5em;
     position: relative; }
     @media (min-width: 480px) {
       #block-panels-mini-header .row-one .middle-column {
-        -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center; } }
+        justify-content: center; } }
     #block-panels-mini-header .row-one .middle-column .inner {
       width: calc(100% - 37px); }
       #block-panels-mini-header .row-one .middle-column .inner > div:nth-child(5) {
@@ -1365,12 +1298,8 @@ html.js fieldset.collapsible div.fieldset-wrapper {
           display: none; } }
     @media (min-width: 1105px) {
       #block-panels-mini-header .row-one .middle-column {
-        -webkit-box-ordinal-group: initial;
-            -ms-flex-order: initial;
-                order: initial;
-        -webkit-box-flex: 2;
-            -ms-flex: 2 50%;
-                flex: 2 50%; } }
+        order: initial;
+        flex: 2 50%; } }
   #block-panels-mini-header .row-one .right-column {
     margin-right: 0;
     margin-left: 0.5em; }
@@ -1389,9 +1318,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
             width: 25px; } }
     @media (min-width: 1105px) {
       #block-panels-mini-header .row-one .right-column .inner > div {
-        -webkit-box-flex: 100%;
-            -ms-flex: 100%;
-                flex: 100%; } }
+        flex: 100%; } }
   #block-panels-mini-header .row-one .left-column {
     margin-left: 0;
     margin-right: 0.5em;
@@ -1409,58 +1336,33 @@ html.js fieldset.collapsible div.fieldset-wrapper {
     @media (min-width: 506px) {
       #block-panels-mini-header .row-one .right-column,
       #block-panels-mini-header .row-one .left-column {
-        -webkit-box-align: end;
-            -ms-flex-align: end;
-                align-items: flex-end;
-        display: -webkit-box;
-        display: -ms-flexbox;
+        align-items: flex-end;
         display: flex;
-        -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center;
-        -webkit-box-flex: 0;
-            -ms-flex: 0 230px;
-                flex: 0 230px;
+        justify-content: center;
+        flex: 0 230px;
         font-size: 11px;
-        -webkit-box-ordinal-group: 1;
-            -ms-flex-order: 0;
-                order: 0;
+        order: 0;
         margin: auto;
         margin-bottom: 0.5em; } }
     @media (min-width: 560px) {
       #block-panels-mini-header .row-one .right-column,
       #block-panels-mini-header .row-one .left-column {
         font-size: 1em;
-        -webkit-box-flex: 0;
-            -ms-flex: 0 255px;
-                flex: 0 255px; } }
+        flex: 0 255px; } }
     @media (min-width: 1105px) {
       #block-panels-mini-header .row-one .right-column,
       #block-panels-mini-header .row-one .left-column {
-        -webkit-box-flex: 0;
-            -ms-flex: 0 14%;
-                flex: 0 14%;
-        -webkit-box-ordinal-group: initial;
-            -ms-flex-order: initial;
-                order: initial;
+        flex: 0 14%;
+        order: initial;
         margin: 0 1em;
         min-width: 160px; }
         #block-panels-mini-header .row-one .right-column .inner,
         #block-panels-mini-header .row-one .left-column .inner {
           height: 120px;
-          -webkit-box-align: end;
-              -ms-flex-align: end;
-                  align-items: flex-end;
-          display: -webkit-box;
-          display: -ms-flexbox;
+          align-items: flex-end;
           display: flex;
-          -webkit-box-orient: horizontal;
-          -webkit-box-direction: normal;
-              -ms-flex-flow: row wrap;
-                  flex-flow: row wrap;
-          -webkit-box-pack: center;
-              -ms-flex-pack: center;
-                  justify-content: center; } }
+          flex-flow: row wrap;
+          justify-content: center; } }
   #block-panels-mini-header .row-one [data-pane="2506"] {
     text-align: center; }
   #block-panels-mini-header .row-one .header-phone,
@@ -1505,41 +1407,30 @@ html.js fieldset.collapsible div.fieldset-wrapper {
   position: fixed;
   background: white;
   z-index: 100;
-  -webkit-box-shadow: 0px 2px 8px 1px rgba(80, 80, 80, 0.7);
-          box-shadow: 0px 2px 8px 1px rgba(80, 80, 80, 0.7);
+  box-shadow: 0px 2px 8px 1px rgba(80, 80, 80, 0.7);
   left: 0;
   width: 100%; }
   #block-panels-mini-header.sticky-header > .block-content {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
     width: 100%;
     max-width: 1400px;
     margin: auto;
     position: relative;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box; }
+    box-sizing: border-box; }
   #block-panels-mini-header.sticky-header #mini-panel-header {
     width: 100%; }
   #block-panels-mini-header.sticky-header .row-one .left-column,
   #block-panels-mini-header.sticky-header .row-one .right-column {
     min-width: 0;
-    -webkit-box-flex: 0;
-        -ms-flex: 0 225px;
-            flex: 0 225px;
+    flex: 0 225px;
     z-index: 1;
     display: block; }
     #block-panels-mini-header.sticky-header .row-one .left-column .inner,
     #block-panels-mini-header.sticky-header .row-one .right-column .inner {
-      -webkit-box-align: start;
-          -ms-flex-align: start;
-              align-items: flex-start;
+      align-items: flex-start;
       height: 73px;
-      -webkit-box-sizing: border-box;
-              box-sizing: border-box; }
+      box-sizing: border-box; }
   #block-panels-mini-header.sticky-header .row-one .left-column {
     text-align: center;
     position: absolute;
@@ -1762,8 +1653,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
     display: inline-block;
     font-size: 13px; }
   .form-item input[type="text"] {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box; }
+    box-sizing: border-box; }
 
 .form-item.form-type-date-combo {
   margin-bottom: 0; }
@@ -1863,8 +1753,7 @@ input.form-submit {
 
 .views-exposed-form .reset-link-button {
   background-image: url(/sites/all/themes/rubik/images/buttons.png) !important;
-  -webkit-box-shadow: #ddd 0 1px 1px;
-          box-shadow: #ddd 0 1px 1px;
+  box-shadow: #ddd 0 1px 1px;
   cursor: pointer;
   padding: 3px 10px;
   color: #333;
@@ -1890,16 +1779,9 @@ input.form-submit {
   margin: auto;
   font-family: Georgia, "Book Antiqua", serif;
   font-style: italic;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  justify-content: center;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  flex-flow: row wrap;
   height: 1em; }
   #block-superfish-1 #superfish-1 > li,
   #block-superfish-1 #superfish-2 > li,
@@ -1974,7 +1856,6 @@ input.form-submit {
       line-height: 1;
       line-height: 20px;
       border: 0;
-      -webkit-transition: color 0.4s ease 0s;
       transition: color 0.4s ease 0s; }
       #block-superfish-1 #superfish-1 li a > .sf-sub-indicator,
       #block-superfish-1 #superfish-2 li a > .sf-sub-indicator,
@@ -2133,8 +2014,7 @@ input.form-submit {
   background-color: #e9eaec;
   line-height: 1.5;
   font-size: 16px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
+  box-sizing: border-box; }
   #block-superfish-1 #superfish-1-accordion li.active-trail,
   #block-superfish-1 #superfish-2-accordion li.active-trail,
   .pane-superfish-1 #superfish-1-accordion li.active-trail,
@@ -2179,61 +2059,35 @@ input.form-submit {
     color: #00728e; }
 
 #mini-panel-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center; }
+  flex-flow: row wrap;
+  align-items: center; }
   #mini-panel-footer .copyright,
   #mini-panel-footer .pane-menu-menu-footer-links {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex; }
   #mini-panel-footer .copyright {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-flex: 1;
-        -ms-flex: 1 100%;
-            flex: 1 100%; }
+    justify-content: center;
+    flex: 1 100%; }
     @media (min-width: 700px) {
       #mini-panel-footer .copyright {
-        -webkit-box-flex: 0;
-            -ms-flex: 0 350px;
-                flex: 0 350px;
+        flex: 0 350px;
         min-width: 350px;
-        -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center; } }
+        justify-content: center; } }
   #mini-panel-footer .pane-menu-menu-footer-links {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-flex: 1;
-        -ms-flex: 1 100%;
-            flex: 1 100%; }
+    justify-content: center;
+    flex: 1 100%; }
     @media (min-width: 0px) and (max-width: 437px) {
       #mini-panel-footer .pane-menu-menu-footer-links .menu li {
         display: inline-block;
         margin-left: 0;
         float: left;
         clear: none;
-        -webkit-box-sizing: border-box;
-                box-sizing: border-box; } }
+        box-sizing: border-box; } }
     @media (min-width: 700px) {
       #mini-panel-footer .pane-menu-menu-footer-links {
-        -webkit-box-flex: 1;
-            -ms-flex: 1 1 240px;
-                flex: 1 1 240px;
+        flex: 1 1 240px;
         min-width: 240px;
-        -webkit-box-pack: end;
-            -ms-flex-pack: end;
-                justify-content: flex-end; } }
+        justify-content: flex-end; } }
     #mini-panel-footer .pane-menu-menu-footer-links a {
       color: black; }
       #mini-panel-footer .pane-menu-menu-footer-links a:hover {
@@ -2274,16 +2128,9 @@ div#panels-ipe-control-container {
   font-size: 0.8em; }
   .pane-node-links ul.links.inline {
     text-align: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
+    flex-flow: row wrap;
+    justify-content: center; }
     .pane-node-links ul.links.inline li:not(:last-child) {
       margin-right: 5px; }
 
@@ -2314,8 +2161,7 @@ div#panels-ipe-control-container {
   border-style: solid;
   display: inline-block;
   border-radius: 3px;
-  -webkit-box-shadow: #ddd 0 1px 1px;
-          box-shadow: #ddd 0 1px 1px;
+  box-shadow: #ddd 0 1px 1px;
   margin-top: 1em; }
   .field-name-field-call-to-action a {
     color: white; }
