--- a/sass/print.scss
+++ b/sass/print.scss
@@ -167,6 +167,9 @@ img.print-logo {
             height: auto;
         }
     }
+    .field-name-title-field {
+        text-align: center;
+    }
 }
 
 .node-type-press-release.panelized-node.print-version {
