--- a/css/print.css
+++ b/css/print.css
@@ -163,6 +163,10 @@ img.print-logo {
   height: auto;
 }
 
+.print-version .field-name-title-field {
+  text-align: center;
+}
+
 .node-type-press-release.panelized-node.print-version {
   display: flex;
   flex-flow: column nowrap;
