--- a/sass/mail.scss
+++ b/sass/mail.scss
@@ -24,6 +24,13 @@ body.page-printmail {
 
         .form-type-textfield {
             @include flexifields(100px);
+
+            label {
+                width: 100%;
+            }
+            input {
+                width: calc(100% - 100px);
+            }
         }
 
         input.form-submit {
