--- a/css/mail.css
+++ b/css/mail.css
@@ -25,28 +25,28 @@ body.page-printmail form#print-mail-form .form-item {
   text-align: left;
 }
 
-body.page-printmail form#print-mail-form .form-type-textfield .form-item {
+body.page-printmail form#print-mail-form .form-item .form-item {
   display: flex;
   width: 100%;
   align-items: center;
   flex-flow: row wrap;
 }
 
-body.page-printmail form#print-mail-form .form-type-textfield label {
-  flex: 0 0 100px;
+body.page-printmail form#print-mail-form .form-item label {
+  flex: 0 0 120px;
 }
 
-body.page-printmail form#print-mail-form .form-type-textfield input {
-  flex: 1 1 calc(100% - 100px);
+body.page-printmail form#print-mail-form .form-item input {
+  flex: 1 1 calc(100% - 120px);
   min-width: 100px;
 }
 
-body.page-printmail form#print-mail-form .form-type-textfield label {
-  width: 100%;
+body.page-printmail form#print-mail-form .form-item label {
+  width: 120px;
 }
 
-body.page-printmail form#print-mail-form .form-type-textfield input {
-  width: calc(100% - 100px);
+body.page-printmail form#print-mail-form .form-item input {
+  width: calc(100% - 120px);
 }
 
 body.page-printmail form#print-mail-form input.form-submit {
