--- a/css/mail.css
+++ b/css/mail.css
@@ -48,7 +48,13 @@ body.page-printmail form#print-mail-form .form-item label {
 }
 
 body.page-printmail form#print-mail-form .form-item input {
-  min-width: 250px;
+  min-width: 0;
+}
+
+@media (min-width: 430px) {
+  body.page-printmail form#print-mail-form .form-item input {
+    min-width: 250px;
+  }
 }
 
 body.page-printmail form#print-mail-form .form-item-txt-to-addrs {
@@ -77,11 +83,34 @@ body.page-printmail form#print-mail-form .form-item-txt-to-addrs label {
 }
 
 body.page-printmail form#print-mail-form .form-item-txt-to-addrs .form-textarea-wrapper {
-  min-width: 250px;
+  flex: 1 1 calc(100% - 120px);
+  min-width: 0;
+}
+
+@media (min-width: 430px) {
+  body.page-printmail form#print-mail-form .form-item-txt-to-addrs .form-textarea-wrapper {
+    min-width: 250px;
+  }
 }
 
 body.page-printmail form#print-mail-form .form-item-txt-to-addrs textarea#edit-txt-to-addrs {
   width: 100%;
+}
+
+body.page-printmail form#print-mail-form .form-type-item > a {
+  flex: 1 1 calc(100% - 120px);
+  min-width: 0;
+  word-break: break-word;
+}
+
+@media (min-width: 450px) {
+  body.page-printmail form#print-mail-form .form-type-item > a {
+    min-width: 400px;
+  }
+}
+
+body.page-printmail form#print-mail-form .form-item-txt-message .form-textarea-wrapper {
+  flex: 100%;
 }
 
 body.page-printmail form#print-mail-form input.form-submit {
