Fix border color

--- a/css/login.css
+++ b/css/login.css
@@ -3,6 +3,6 @@
 /********************/
 /* Fluid Typography */
 form#user-login, form#user-pass {
-  border: 2px solid lightgrey;
+  border: 2px solid #77bbcc;
 }
 /*# sourceMappingURL=login.css.map */
