--- a/css/mail.css
+++ b/css/mail.css
@@ -17,7 +17,7 @@ body.page-printmail #page {
 body.page-printmail form#print-mail-form {
   padding: 1em;
   border-radius: 10px;
-  border: 2px solid lightgrey;
+  border: 2px solid #77bbcc;
   text-align: center;
 }
 
