--- a/sass/mail.scss
+++ b/sass/mail.scss
@@ -15,7 +15,7 @@ body.page-printmail {
     form#print-mail-form {
         padding: 1em;
         border-radius: 10px;
-        border: 2px solid lightgrey;
+        border: 2px solid #77bbcc;
         text-align: center;
 
         .form-item {
