--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -193,6 +193,10 @@ body.page-admin .region-footer .block,
 body.page-admin .region-footer table {
   border: 0px; }
 
+body.page-contaact-us .pane-node-webform.boxed {
+  border: 2px solid #77bbcc;
+  border-radius: 10px; }
+
 .unpublished {
   color: red;
   text-align: center;
@@ -770,6 +774,7 @@ ul.rules-operations-add a {
 .ui-dialog button.ui-dialog-titlebar-close,
 .modal-header .close,
 #modalContent div.ctools-modal-content a.close {
+  -webkit-border-radius: 5px;
   border-radius: 5px;
   background: #444 url(images/buttons.png) -4000px 50% no-repeat;
   display: block;
@@ -937,8 +942,7 @@ table.field-multiple-table tr {
 
 tr.ief-row-entity .ief-entity-operations input.button-remove {
   position: relative;
-  -webkit-transform: none;
-          transform: none;
+  transform: none;
   right: 0;
   top: 50%; }
 
@@ -1024,10 +1028,15 @@ form .tabs {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7db9e8+0,1e5799+100 */
   background: #7db9e8;
   /* Old browsers */
+  background: -moz-linear-gradient(top, #7db9e8 0%, #1e5799 100%);
   /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #7db9e8), color-stop(100%, #1e5799));
   /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #7db9e8 0%, #1e5799 100%);
   /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #7db9e8 0%, #1e5799 100%);
   /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #7db9e8 0%, #1e5799 100%);
   /* IE10+ */
   background: linear-gradient(to bottom, #7db9e8 0%, #1e5799 100%);
   /* W3C */
@@ -1038,8 +1047,7 @@ form .tabs {
   color: white; }
 
 .ui-datepicker .ui-icon {
-  -webkit-filter: invert(1);
-          filter: invert(1); }
+  filter: invert(1); }
 
 .ui-datepicker-current-day .ui-state-active {
   background: #7DB9E8; }
@@ -1054,10 +1062,15 @@ form .tabs {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#666666+0,333333+100 */
   background: #666666;
   /* Old browsers */
+  background: -moz-linear-gradient(top, #666666 0%, #333333 100%);
   /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #666666), color-stop(100%, #333333));
   /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #666666 0%, #333333 100%);
   /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #666666 0%, #333333 100%);
   /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #666666 0%, #333333 100%);
   /* IE10+ */
   background: linear-gradient(to bottom, #666666 0%, #333333 100%);
   /* W3C */
@@ -1669,8 +1682,7 @@ td:not([class]) {
       position: absolute;
       right: -50px;
       top: 50%;
-      -webkit-transform: rotate(-90deg);
-              transform: rotate(-90deg); } }
+      transform: rotate(-90deg); } }
 
 /* Admin page styles */
 .pane-user-roles ul li {
@@ -1917,8 +1929,7 @@ input.form-submit {
   .pane-superfish-1 #superfish-2 .sf-sub-indicator,
   .pane-superfish-2 #superfish-1 .sf-sub-indicator,
   .pane-superfish-2 #superfish-2 .sf-sub-indicator {
-    -webkit-filter: invert(70%);
-            filter: invert(70%); }
+    filter: invert(70%); }
   #block-superfish-1 #superfish-1 .menuparent ul,
   #block-superfish-1 #superfish-2 .menuparent ul,
   .pane-superfish-1 #superfish-1 .menuparent ul,
@@ -2187,4 +2198,3 @@ div#panels-ipe-control-container {
   margin: auto; }
   .field-name-body table td {
     border: 0px; }
-/*# sourceMappingURL=dgr_rubik_style.css.map */
