--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -2198,3 +2198,7 @@ div#panels-ipe-control-container {
   margin: auto; }
   .field-name-body table td {
     border: 0px; }
+
+.pane-print-ui-print-links .pane-content span {
+  margin: 0 1em 0 0;
+  display: inline-block; }
