--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2785,7 +2785,11 @@ div#panels-ipe-control-container {
     }
 }
 
-.pane-print-ui-print-links .pane-content span {
-    margin: 0 1em 0 0;
-    display: inline-block;
+.pane-print-ui-print-links .pane-content {
+    text-align: center;
+    
+    span {
+        margin: 0 0.5em 0 0.5em;
+        display: inline-block;
+    }
 }
