--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2787,7 +2787,9 @@ div#panels-ipe-control-container {
 
 .pane-print-ui-print-links .pane-content {
     text-align: center;
-    
+    font-size: 0.8em;
+    margin-top: 0.5em;
+
     span {
         margin: 0 0.5em 0 0.5em;
         display: inline-block;
