Add blue borders on the contact form

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -193,7 +193,7 @@ body.page-admin .region-footer .block,
 body.page-admin .region-footer table {
   border: 0px; }
 
-body.page-contaact-us .pane-node-webform.boxed {
+body.page-contact-us .pane-node-webform.boxed {
   border: 2px solid #77bbcc;
   border-radius: 10px; }
 
