--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -187,7 +187,7 @@ body.page-admin .region-footer {
         border: 0px;
     }
 }
-body.page-contaact-us {
+body.page-contact-us {
     .pane-node-webform.boxed {
         border: 2px solid #77bbcc;
         border-radius: 10px;
