Align left categories on the FAQ pages

--- a/sass/faq-nodes.scss
+++ b/sass/faq-nodes.scss
@@ -29,7 +29,7 @@
     .field-name-field-categories {
         margin-top: 1em;
         font-size: 0.9em;
-        text-align: right;
+        text-align: left;
         font-weight: bold;
 
         .field-label,
