--- a/css/faq-nodes.css
+++ b/css/faq-nodes.css
@@ -3,83 +3,50 @@
 /********************/
 /* Fluid Typography */
 .node-type-panopoly-faq .field-name-field-featured-image {
-  width: 100%;
-}
-
-@media (min-width: 481px) {
-  .node-type-panopoly-faq .field-name-field-featured-image {
-    margin: 0 1em 1em 0;
-    width: 50%;
-    float: left;
-  }
-}
-
-.node-type-panopoly-faq .field-name-field-featured-image img {
-  max-width: 100%;
-  min-width: 0;
-  height: auto;
-  width: 100%;
-}
+  width: 100%; }
+  @media (min-width: 481px) {
+    .node-type-panopoly-faq .field-name-field-featured-image {
+      margin: 0 1em 1em 0;
+      width: 50%;
+      float: left; } }
+  .node-type-panopoly-faq .field-name-field-featured-image img {
+    max-width: 100%;
+    min-width: 0;
+    height: auto;
+    width: 100%; }
 
 .node-type-panopoly-faq .row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  padding: 0 1em;
-}
+  flex-flow: row wrap;
+  padding: 0 1em; }
 
 .node-type-panopoly-faq .field-name-field-categories {
   margin-top: 1em;
   font-size: 0.9em;
-  text-align: right;
-  font-weight: bold;
-}
-
-.node-type-panopoly-faq .field-name-field-categories .field-label,
-.node-type-panopoly-faq .field-name-field-categories .field-items {
-  display: inline-block;
-  float: none;
-}
+  text-align: left;
+  font-weight: bold; }
+  .node-type-panopoly-faq .field-name-field-categories .field-label,
+  .node-type-panopoly-faq .field-name-field-categories .field-items {
+    display: inline-block;
+    float: none; }
 
 .node-type-panopoly-faq .radix-layouts-content {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 100%;
-          flex: 1 100%;
-  padding-right: 0;
-}
-
-@media (min-width: 848px) {
-  .node-type-panopoly-faq .radix-layouts-content {
-    -webkit-box-flex: 3;
-        -ms-flex: 3 0 560px;
-            flex: 3 0 560px;
-    min-width: 560px;
-    padding: 0.5em;
-  }
-}
+  flex: 1 100%;
+  padding-right: 0; }
+  @media (min-width: 848px) {
+    .node-type-panopoly-faq .radix-layouts-content {
+      flex: 3 0 560px;
+      min-width: 560px;
+      padding: 0.5em; } }
 
 .node-type-panopoly-faq .radix-layouts-sidebar {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 300px;
-          flex: 1 300px;
+  flex: 1 300px;
   min-width: 300px;
-  padding-left: 0;
-}
-
-@media (min-width: 848px) {
-  .node-type-panopoly-faq .radix-layouts-sidebar {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 1 250px;
-            flex: 1 1 250px;
-    padding: 0.5em;
-  }
-}
-
-.node-type-panopoly-faq .radix-layouts-sidebar .boxed {
-  padding-top: 2em;
-}
+  padding-left: 0; }
+  @media (min-width: 848px) {
+    .node-type-panopoly-faq .radix-layouts-sidebar {
+      flex: 1 1 250px;
+      padding: 0.5em; } }
+  .node-type-panopoly-faq .radix-layouts-sidebar .boxed {
+    padding-top: 2em; }
 /*# sourceMappingURL=faq-nodes.css.map */
