Added targetging for press-releases View pane because it is not being loaded

--- a/sass/articles-news-nodes.scss
+++ b/sass/articles-news-nodes.scss
@@ -58,7 +58,8 @@
     }
 }
 .pane-news2-panel-pane-5,
-.pane-articles2-panel-pane-5 {
+.pane-articles2-panel-pane-5,
+.pane-press-releases2-panel-pane-5 {
     .view-content {
         display: flex;
         flex-flow: row wrap;
