--- a/css/articles-news-nodes.css
+++ b/css/articles-news-nodes.css
@@ -32,30 +32,21 @@
 
 .node-type-article-post .row,
 .node-type-panopoly-news-article .row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  flex-flow: row wrap;
   padding: 0 1em;
 }
 
 .node-type-article-post .radix-layouts-content,
 .node-type-panopoly-news-article .radix-layouts-content {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 100%;
-          flex: 1 100%;
+  flex: 1 100%;
   padding-right: 0;
 }
 
 @media (min-width: 848px) {
   .node-type-article-post .radix-layouts-content,
   .node-type-panopoly-news-article .radix-layouts-content {
-    -webkit-box-flex: 3;
-        -ms-flex: 3 0 560px;
-            flex: 3 0 560px;
+    flex: 3 0 560px;
     min-width: 560px;
     padding: 0.5em;
   }
@@ -63,9 +54,7 @@
 
 .node-type-article-post .radix-layouts-sidebar,
 .node-type-panopoly-news-article .radix-layouts-sidebar {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 300px;
-          flex: 1 300px;
+  flex: 1 300px;
   min-width: 300px;
   padding-left: 0;
 }
@@ -73,9 +62,7 @@
 @media (min-width: 848px) {
   .node-type-article-post .radix-layouts-sidebar,
   .node-type-panopoly-news-article .radix-layouts-sidebar {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 1 250px;
-            flex: 1 1 250px;
+    flex: 1 1 250px;
     padding: 0.5em;
   }
 }
@@ -86,36 +73,33 @@
 }
 
 .pane-news2-panel-pane-5 .view-content,
-.pane-articles2-panel-pane-5 .view-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.pane-articles2-panel-pane-5 .view-content,
+.pane-press-releases2-panel-pane-5 .view-content {
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  flex-flow: row wrap;
 }
 
 .pane-news2-panel-pane-5 .views-row,
-.pane-articles2-panel-pane-5 .views-row {
+.pane-articles2-panel-pane-5 .views-row,
+.pane-press-releases2-panel-pane-5 .views-row {
   display: inline-block;
   vertical-align: top;
   width: 230px;
   margin-right: 10px;
   margin-bottom: 0.5em;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 240px;
-          flex: 1 240px;
+  flex: 1 240px;
 }
 
 .pane-news2-panel-pane-5 .views-field-field-featured-image,
-.pane-articles2-panel-pane-5 .views-field-field-featured-image {
+.pane-articles2-panel-pane-5 .views-field-field-featured-image,
+.pane-press-releases2-panel-pane-5 .views-field-field-featured-image {
   float: left;
   margin-right: 10px;
 }
 
 .pane-news2-panel-pane-5 .views-field-published-at,
-.pane-articles2-panel-pane-5 .views-field-published-at {
+.pane-articles2-panel-pane-5 .views-field-published-at,
+.pane-press-releases2-panel-pane-5 .views-field-published-at {
   font-size: 0.8em;
 }
 /*# sourceMappingURL=articles-news-nodes.css.map */
